<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NoteEase</string>
    <string name="sign_in">Sign In</string>
    <string name="hi_welcome_back_you_ve_been_missed">Hi! Welcome back, you\'ve been missed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_account">Create Account</string>
    <string name="fill_your_information_below">Fill your information below</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_email_below">Enter the email below</string>
    <string name="submit">Submit</string>
    <string name="add">add</string>
    <string name="logout">logout</string>
    <string name="hello">Hello,</string>
    <string name="no_notes">No Notes</string>
</resources>